background image not showingup on Heroku fix

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
 
 /* Photo by Marco Molitor on Unsplash */
 .home-cta {
-  background: url('/images/background.jpg');
+  background-image: image-url('/images/background.jpg');
   background-size: cover;
   height: 100%;
   width: 100%;
